Make sure the buttons are visible in portrait mobiles when on an individual pattern's page.

--- a/_sass/_mediaq.scss
+++ b/_sass/_mediaq.scss
@@ -29,19 +29,9 @@
             width: 703px;
         }
 
-        .button-bank.left {
-            top: 10px;
-            left: 0;
-        }
-
-        .button-bank.right {
-            top: 10px;
-            left: 632px;
-        }
-
-        .button-bank.combos {
-            top: 229px;
-            left: 562px;
+        .button-bank {
+            top: 74px;
+            left: 20px;
         }
     }
 }
